--- a/application-dev.yml
+++ b/application-dev.yml
@@ -15,11 +15,11 @@ spring:
   rabbitmq:
     host: paascloud-mq-rabbit
     port: 5672
-    username: guest
-    password: guest
+    username: yangwensheng
+    password: 123456
   redis:
     host: paascloud-db-redis
-    password: paascloud@redis
+    password:
     port: 6379
     timeout: 0
   datasource:
@@ -40,8 +40,8 @@ spring:
         login-password: admin
   mail:
     host: smtp.163.com
-    username: paascloudTest@163.com
-    password: a123456
+    username: xinglinglove1029@163.com
+    password: qwe1029!@#
     port: 465
     protocol: smtp
     test-connection: false
